# numr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  compound_units.numr  default.nix  example.numr  flake.nix  result
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
aur-git/: PKGBUILD
crates/numr-cli/: Cargo.toml
crates/numr-cli/src/: lib.rs  main.rs  server.rs
crates/numr-cli/tests/: server_integration.rs
crates/numr-core/: Cargo.toml
crates/numr-core/src/: catalog.rs  error.rs  fetch.rs  lib.rs  wasm.rs
crates/numr-core/src/cache/: mod.rs
crates/numr-core/src/eval/: mod.rs
crates/numr-core/src/parser/: ast.rs  grammar.pest  mod.rs
crates/numr-core/src/types/: currency.rs  mod.rs  unit.rs  value.rs
crates/numr-core/tests/: compound_units_test.rs  cryptocurrency_tests.rs  edge_cases.rs  example_file_test.rs  financial_tests.rs  formatting_tests.rs  integration_tests.rs  monetary_tests.rs  real_life.rs  regression_070.rs  regression_080.rs
crates/numr-editor/: Cargo.toml
crates/numr-editor/src/: buffer.rs  highlight.rs  lib.rs  text.rs  wasm.rs
crates/numr-tui/: Cargo.toml
crates/numr-tui/src/: app.rs  config.rs  exchange.rs  handlers.rs  line_layout.rs  main.rs  persistence.rs  popups.rs  theme.rs  ui.rs
docs/: architecture.md  json-rpc.md
homebrew/: numr.rb
