[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/nasedkinpv/numr"

[workspace.dependencies]
# Core dependencies
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde", "serde-float", "maths"] }

# Parsing
pest = "2"
pest_derive = "2"

# Async/HTTP (for currency rates)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
atomic-write-file = "0.3"

# TUI
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = "0.29"

# CLI
clap = { version = "4", features = ["derive"] }

# Runtime-oriented native release profile. WASM builds override opt-level to
# `z` in numr-web's build entrypoints before wasm-opt performs its final pass.
[profile.release]
panic = "abort"
codegen-units = 1
opt-level = 3
lto = true
strip = true
