[package]
name = "numr-cli"
description = "Command-line interface for numr calculator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "numr-cli"
path = "src/main.rs"

[dependencies]
numr-core = { path = "../numr-core", features = ["fetch"] }
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
