[package]
name = "numr-cli"
description = "Command-line interface for numr calculator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
numr-core = { path = "../numr-core", features = ["fetch"] }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
