[package]
name = "numr-core"
description = "Core calculation engine for numr - expression parsing, evaluation, and unit handling"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
fetch = ["reqwest"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
pest.workspace = true
pest_derive.workspace = true
rust_decimal.workspace = true

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Filesystem caching (not available in WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6"

# Optional: for fetching exchange rates
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.reqwest]
workspace = true
optional = true

[dev-dependencies]
pretty_assertions.workspace = true
