[package]
name = "numr-editor"
description = "Shared syntax highlighting and text primitives for numr frontends"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:serde", "dep:serde_json", "dep:console_error_panic_hook"]

[dependencies]
numr-core = { path = "../numr-core" }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
