[package]
name = "numr-tui"
description = "Terminal UI for numr calculator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "numr"
path = "src/main.rs"

[dependencies]
numr-core = { path = "../numr-core", features = ["fetch"] }
numr-editor = { path = "../numr-editor" }
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
directories = "6"
tokio.workspace = true
unicode-segmentation = "1.13"
toml = "1"
serde.workspace = true
atomic-write-file.workspace = true
